adds a quick note

--- a/hardware/mbed.tex
+++ b/hardware/mbed.tex
@@ -200,6 +200,8 @@ A design was created using fritzing \cite{fritzing} which can be seen in Figure~
 
 This was then built, as can be seen from Figure~\ref{fig:board}. To avoid having to solder on the actual mBed and sensor to the veroboard, female header pins are used in a manner similar to IC holders allowing for them to be placed and removed from the board as required. For compactness, the battery packs were attached to the underside of the board using velcro. 
 
+\note{talk about the rest of the velcro}
+
 \note{Limitations of mBed, e.g. hardware divide, floating point arithmetic}
 \note{Configuring Watchdog Oscillator for main clock}
 \note{SPI mBed library cannot be compiled because it is bigger than the flash memory}
