Added minor detail to Project Management > Tools

--- a/management/tools.tex
+++ b/management/tools.tex
@@ -13,12 +13,12 @@ In order to share code, the decision was made to use Git Version Control, a wide
 For this project, a range of repositories were created, all of which are publicly available on GitHub, a centralised website for storing Git repositories. The repositories were:
 
 \begin{description}
-    \item[ml-data] \hfill \\ The data and conversion scripts used to collect movement data
-    \item[docs] \hfill \\ Minutes and Administrative documents associated with the project
-    \item[ml-java] \hfill \\ Scaled down version of Weka, converted to a processing harness to output a neural network in optimised format
-    \item[ml-c] \hfill \\ An implementation of the algorithm, capable of running on a desktop machine
-    \item[mbed] \hfill \\ The implementation of the algorithm, with optimised mBed libraries, designed for the \verb|LPC11U24_401|
-    \item[report] \hfill \\ This report
+    \item[ml-data] \hfill \\ The conversion scripts used to on movement data, as described in section \ref{sec:tools}, and the raw \verb|.csv| files of the raw data.
+    \item[docs] \hfill \\ Administrative documents associated with the project: Agenda, Minutes, the Project Brief, Gantt Charts and the Ethical Approval Request.
+    \item[ml-java] \hfill \\ Scaled down version of Weka, converted to a processing harness to output a neural network in optimised format.
+    \item[ml-c] \hfill \\ An implementation of the algorithm, capable of running on a desktop machine.
+    \item[mbed] \hfill \\ The implementation of the algorithm, with optimised mBed libraries, designed for the \verb|LPC11U24_401|.
+    \item[report] \hfill \\ The repository for this report, including all diagrams and figures, and the underlying data used to generate the graphs in section \ref{ml}.
 \end{description}
 
 Git also keeps a full local copy of each repository on each developer's computer, allowing each member to continue their work even when not connected to the internet. This is also acted as a backup, as well as a Git server which is run by Daniel Playle, which the group also pushed their changes to.
