Proposed new Chapter structure

--- a/report.tex
+++ b/report.tex
@@ -77,12 +77,15 @@
 	%% ----------------------------------------------------------------
 	% Introduction chapter
 	\input{intro/intro}
-	
+
 	% Software chapter
-	\input{software/software}
+	\input{research/research}
 
 	% Hardware chapter
 	\input{hardware/hardware}
+
+	% Software chapter
+	\input{software/software}
 
 	% User study chapter
 	\input{study/study}
