--- a/software/software.tex
+++ b/software/software.tex
@@ -1,9 +1,7 @@
-\chapter{Software}
+\chapter{Software Development}
 
-This project required the creation of an algorithm powerful enough to accurately detect and classify subtle foot movements whilst small enough to fit into a small memory space and run in a sub threshold platform. This chapter analysises the tools and techniques used to develop such an algorithm, and discusses some of the trade-offs and optimisations that were investigated.
+We have discussed the requirements of the chosen algorithm, and had a detailed overview of the capabilities and limitations of the hardware available to the team. This chapter analysis's the tools and techniques used to develop such the project's algorithm, and discusses some of the trade-offs and optimisations that were investigated.
 
-\input{software/exercise-detection}
-\input{software/machine-learning}
 \input{software/algorithm}
 \input{software/heuristics}
 \input{software/development}
