--- a/appendices/gantt.tex
+++ b/appendices/gantt.tex
@@ -1,4 +1,4 @@
-\chapter{Gantt Charts}\label{ch:gantt}
+\chapter{Gantt charts}\label{ch:gantt}
 
 The following 4 pages show our planned Gantt charts.
 
@@ -6,25 +6,25 @@ The following 4 pages show our planned Gantt charts.
 
 \begin{table}
     \includegraphics{figures/half-term-1.pdf}
-    \caption{Gantt Chart: Initial Half of Term 1}
+    \caption{Gantt chart: initial falf of term 1}
     \label{table:gantt:term11}
 \end{table}
 
 \begin{table}
     \includegraphics{figures/hardware-gantt.pdf}
-    \caption{Gantt Chart: Hardware Development Work}
+    \caption{Gantt chart: Hardware development work}
     \label{table:gantt:hardware}
 \end{table}
 
 \begin{table}
     \includegraphics{figures/half-term-2.pdf}
-    \caption{Gantt Chart: Second half of Term 1}
+    \caption{Gantt chart: Second half of term 1}
     \label{table:gantt:term12}
 \end{table}
 
 \begin{table}[h!]
     \includegraphics{figures/report-gantt.pdf}
-    \caption{Gantt Chart: After Christmas}
+    \caption{Gantt chart: after christmas}
     \label{table:gantt:report}
 \end{table}
 
