--- a/research/machine-learning.tex
+++ b/research/machine-learning.tex
@@ -58,7 +58,7 @@ This data was run through a series of tools to build a model, as described in se
 		1        & 0     & 1      & 7       & Walking  &                       \\
 		\hline
 	\end{tabular}
-	\caption{Feasibility assessment confusion matrix \label{tab:first-confusion}}
+	\caption{Feasibility assessment of confusion matrix \label{tab:first-confusion}}
 \end{table}
 
 % Axes labels!
