--- a/software/space.tex
+++ b/software/space.tex
@@ -2,7 +2,7 @@
 
 As described in \ref{section}, the device has very little memory space availiable: 8KB for both program code and data. When the algorithm code was first compiled with the mBed's precompiled libraries, the total size of the binary was 12KB. The first step to solve this was to obtain the source code for the mBed libraries; compiling these directly along with the program code, offers further potencial for the compiler to optimise the link between the API and the algorithm, based on the specific usecase.
 
-The method was successful at reducing the total binary size to 8KB. This was a substancial improvement, however it was clear that this would need to be decreased further as it an 8KB binary leaves no space for heap or stack space when the code is run.
+The method was successful at reducing the total binary size to 8KB. This was a substancial improvement, however it was clear that this would need to be decreased further as an 8KB binary leaves no room for heap or stack space when the code is run.
 
 \subsection{Improving GCC's Optimisations}
 
@@ -116,4 +116,4 @@ It is plain to see that this is an extremely inefficient process and requires su
 
 A secondary side effect of using libraries is that they come with a large amount of general overhead; for example, the gyroscopic device that was used, the \verb|MPU6050| comes with a C++ class to interact with it. This, in turn, used its own secondary class, \verb|I2Cdev|, to interact with the device over the I2C bus. This class contained the logic to transform values into bit masks to allow the updating of individual bits within the device's configuration registers. These bit masks were passed on to the mBed library's \verb|I2C| class, which holds a \verb|struct| containing the pointer to the I2C memory address range, and acts as a wrapper for the mBed library's C I2C functions.
 
-Defining, instantiating and storing a pointer, within a struct, within a class, within a class, within yet another class is an enormous overhead, especially as the middle layers of this abstraction are not adding significant functionality, but are merely acting as gatekeepers between the \verb|MPU6050| class and the lower level I2C functions. As part of the optimisation process, these unnecessary data structures were combined and removed where possible: pointers to memory addresses were replaced with definitions, as discussed above in section \ref{section:constant-memory-map}, bit masks were replaced with precomputed constants and the MPU class was converted into a set of static functions to be called directly from \verb|main()|, removing the need to instantiate an object at all.
+Defining, instantiating and storing a pointer, within a struct, within a class, within a class, within yet another class is an enormous overhead, especially as the middle layers of this abstraction are not adding significant functionality, but are merely acting as gatekeepers between the \verb|MPU6050| class and the lower level I2C functions. As part of the optimisation process, these unnecessary data structures were combined and removed where possible: pointers to memory addresses were replaced with definitions, as discussed above in section \ref{section:constant-memory-map}, bit masks were replaced with precomputed constants, and the MPU class was converted into a set of static functions to be called directly from \verb|main()|, removing the need to instantiate an object at all.
