Put 'of' on wrong figure in 1cf51a4dacfdb3feb817cb790f1f17cd653cb3e7

--- a/research/machine-learning.tex
+++ b/research/machine-learning.tex
@@ -58,7 +58,7 @@ This data was run through a series of tools to build a model, as described in se
 		1        & 0     & 1      & 7       & Walking  &                       \\
 		\hline
 	\end{tabular}
-	\caption{Feasibility assessment of confusion matrix \label{tab:first-confusion}}
+	\caption{Feasibility assessment confusion matrix \label{tab:first-confusion}}
 \end{table}
 
 % Axes labels!
@@ -68,7 +68,7 @@ This data was run through a series of tools to build a model, as described in se
 	\subfigure[Noise]{\label{fig:first-noise}\includegraphics[width=70mm]{figures/first-noise.pdf}}
 	\subfigure[Stairs]{\label{fig:first-stairs}\includegraphics[width=70mm]{figures/first-stairs.pdf}}
 	\subfigure[Walking]{\label{fig:first-walking}\includegraphics[width=70mm]{figures/first-walking.pdf}}
-	\caption{Feasibility assessment collected data \label{fig:first-data}}
+	\caption{Feasibility assessment of collected data \label{fig:first-data}}
 \end{figure}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%% * Okay
