Fixed further typos

--- a/appendices/risks.tex
+++ b/appendices/risks.tex
@@ -2,7 +2,7 @@
 
 The project's risk assessment is shown on the following two pages, ordered from highest priority to lowest. The
 first two risks did materialise for this team, however the
-planned mitigation was appropriate so there was no significant issues caused by these.
+planned mitigation was appropriate so there were no significant issues caused by these.
 
 \begin{landscape}
 \begin{table}
@@ -24,7 +24,7 @@ planned mitigation was appropriate so there was no significant issues caused by 
   \hline
  
   Unable to scale algorithm &
-  The system we have been given does not allow division or floating point. It may not be possible to reduce an algorithm to this constraints without prohibitively low running time &
+  The system we have been given does not allow division or floating point. It may not be possible to reduce an algorithm to these constraints without prohibitively low running time &
   0.5 & 0.7 & 0.35 &
   Use this constraint when deciding an optimum algorithm: where possible, choose methods which require less computation and, specifically, fewer operations relying on complex mathematical operations which require accurate floating point or division. \\
   \hline
