--- a/management/tools.tex
+++ b/management/tools.tex
@@ -3,7 +3,7 @@
 While regular meetings, both as a team and with the group's supervisors, are an essencial part of the project management process, it is also important to put in place a structure in which the members can communicate with each other throughout the week, and share work in an auditable fashion.
 
 \subsection{Communication}
-As such, it was decided that the team should agree on a common platform on which to communicate with one another. As the majority of the team member run their own mail servers, and PGP keys which allow messages to be encrypted and signed, email was considered as a potentially secure and private option, especially considering some of ARM's System Verilog is under a non-public license. However, the group felt it was too unstructured to use and as such opted to use this only when large, one-off, files needed to be transferred between two people.
+It was decided that the team should agree on a common platform on which to communicate with one another. As the majority of the team member run their own mail servers, and PGP keys which allow messages to be encrypted and signed, email was considered as a potentially secure and private option, especially considering some of ARM's System Verilog is under a non-public license. However, the group felt it was too unstructured to use and as such opted to use this only when large, one-off, files needed to be transferred between two people.
 
 For general team conversations, the team decided to use Slack, which is a popular messaging tool among developers. It is similar to IRC in that it allows a team to create an arbitrary number of `channels' which group similar messages together such that multiple threads of conversations can be had simultaneously. However, it has a greater degree of centralisation, meaning all messages are stored and searchable, which was seen as an important requirement for structured group work. It also provides support for a variety of platforms, including web, Windows and most mobile systems, allowing the team members to maintain a point of contact throughout the day.
 
@@ -21,9 +21,9 @@ For this project, a range of repositories were created, all of which are publicl
     \item[report] \hfill \\ The repository for this report, including all diagrams and figures, and the underlying data used to generate the graphs in section \ref{ml}.
 \end{description}
 
-Git also keeps a full local copy of each repository on each developer's computer, allowing each member to continue their work even when not connected to the internet. This is also acted as a backup, as well as a Git server which is run by Daniel Playle, which the group also pushed their changes to.
+Git also keeps a full local copy of each repository on each developer's computer, allowing each member to continue their work even when not connected to the internet. This is acted as a backup, as well as a Git server which is run by Daniel Playle, which the group also pushed their changes to.
 
 \subsection{Report Write-up}
-Git proved successful at managing changes to the project's source code, and aiding in the administration overhead required when multiple people are working on the code simultaneously. As such, the group were keen to make use of Git for the report write-up too. This meant binary formats, such as those used by Microsoft Word and other WYSIWYG editors, unacceptable; instead a text-based report write-up would be required, to allow Git to effectively hold it under source control.
+Git proved successful at managing changes to the project's source code, and aiding in the administration overhead required when multiple people are working on the code simultaneously. Because of this, the group were keen to make use of Git for the report write-up too. This meant binary formats, such as those used by Microsoft Word and other WYSIWYG editors, were unacceptable; instead a text-based report write-up would be required, to allow Git to effectively hold it under source control.
 
-\LaTeX is such a system; it uses one or more text files in which report content can be placed, and marked-up with the defined \TeX markup. This can be compiled into a professionally typesetted PDF documents. The team found this solution very helpful as it allowed each member to focus solely on content creation rather than formatting, in the knowledge that the final report would be in a consistent and appropriate format. \LaTeX can also be used to create complex charts, tables and flow diagrams, not only reducing the time spent on such activities, but also ensuring a common `style' for all material produced by the group.
+\LaTeX is such a system; it uses one or more text files in which report content can be placed, and marked-up with the defined \TeX markup. This can be compiled into a professionally typeset PDF documents. The team found this solution very helpful as it allowed each member to focus solely on content creation rather than formatting, in the knowledge that the final report would be in a consistent and appropriate format. \LaTeX can also be used to create complex charts, tables and flow diagrams, not only reducing the time spent on such activities, but also ensuring a common `style' for all material produced by the group.
