Add 169 words about second user study even though we didnt do it

--- a/study/study.tex
+++ b/study/study.tex
@@ -46,4 +46,9 @@ When the phone was attached to the arm, the participants were told to do the sho
 
 Each of these exercises was repeated twice. One time for the accelerometer data and one for the gyroscope data. At the end of each exercise, the results were emailed to a member of the group who made them available on a Git repository.
 
+\namedsection{Second User Study}{Finch}
+In the end, the second part of the user study was not carried out due to the fact there was not sufficient time after the Christmas break to test the system with another complete user study. From the first user study, we knew it would take a long time to arrange and carry out when there is such a large group of people involved. This is because it can take a few weeks to find enough people willing to participate and who are available at the appropriate time. Furthermore, the study itself can take several days to perform. 
+
+While testing the accuracy of the system is a vital part of the project, there were alternative ways to carry out the testing rather than performing a whole user study. This is why it was decided it was more feasible to drop the second user study and instead use the members of the project to test the system. The results of this can be seen in section ??
+
 \section{Classification of Results}
